# VideoPlayerPlugin

./: .gitignore  CMakeLists.txt  MakePackage.bat  Run.bat  readme.md
TestCpp/: CMakeLists.txt  main.cpp  test.lua
VideoPlayerPlugin/: CMakeLists.txt  VideoHelper.cpp  VideoHelper.h  VideoPlayerPlugin.cpp  VideoPlayerPlugin.def  VideoPlayerPlugin.h  stdafx.h
dart_vlc_core/: CMakeLists.txt
dart_vlc_core/api/: api.cc  api.h  event_manager.h
scripts/: PlayerController.lua  VideoPlayerPlugin.lua
